...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginBottom="@dimen/card_spacing"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay_Toolbar"
...
            app:popupTheme="@style/Menu_Theme"
            app:title="@string/app_name"
            tools:ignore="UnusedAttribute"/>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/switchCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_spacing"
            android:clickable="true"
            android:focusable="true"
            app:cardBackgroundColor="@color/switchDisabled"
...
                    android:layout_marginLeft="8dp"
                    android:padding="8dp"
                    android:text="@string/disabled"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    android:textColor="@color/switchTextColor"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/onSwitch"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/onSwitch"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

...
                    android:text="@string/wait_desc"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/delayTitle"
                    tools:ignore="RtlSymmetry" />

                <View
                    android:id="@+id/timeClicker"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:clickable="true"
                    android:focusable="true"
                    app:layout_constraintBottom_toTopOf="@+id/divider1"
                    app:layout_constraintEnd_toEndOf="parent"
...
